fix Blog links and z-index menu

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,6 +2,7 @@
   background-color: $c-bg;
   height: 100vh;
   width: 100vw;
+  z-index: 3;
 
   &__bottom {
     padding-block: 132px;
